Note bug with making High King from Duke

--- a/README
+++ b/README
@@ -95,6 +95,9 @@ Bugs
 
     See feature request 2.
 
+*   Making a High Kingdom for a Duke vassal grants the de-jure lands,
+    but in the process the Counts become directly your Vassal.
+
 Feature Requests
 ================
 
